--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <script>
     // ===============================================
     // 👇 DÁN LINK GOOGLE APPS SCRIPT CỦA BẠN VÀO ĐÂY 👇
-    const GOOGLE_SCRIPT_URL = "DÁN_LINK_CỦA_BẠN_VÀO_ĐÂY"; 
+    const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwnOJhg-fz8wN3-JVVXODrPPNPJJ-kCpPFtCtr2VqF2SvPlR-S_hsjy9ZVWG9ng6YrOhA/exec"; 
     // ===============================================
 
     // 1. Tự động tải danh sách Tỉnh/Huyện Việt Nam
@@ -247,3 +247,4 @@
 
 </body>
 </html>
+
